--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -124,7 +124,7 @@ target_compile_definitions(dorado_tests_common
 # Finish setting up each target and add them as tests.
 foreach(TEST_BIN dorado_tests dorado_smoke_tests)
     if (DORADO_ENABLE_PCH)
-        target_precompile_headers(${TEST_BIN} REUSE_FROM dorado_lib)
+        target_precompile_headers(${TEST_BIN} REUSE_FROM dorado_pch)
     endif()
 
     target_link_libraries(${TEST_BIN}
